--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -36,6 +36,11 @@ body {
     width: 947px;
 }
 
+.logo p {
+    display: block;
+    width: 410px;
+}
+
 .header-base .logo p {
     color: rgb(255, 255, 255);
     font-family: "Montserrat";
